--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@ archives_base_name=easycommand
 
 # Dependencies
 fabric_version=0.96.1+1.20.4
+yet_another_config_lib=3.3.1
+mod_menu_version=9.0.0
